@@ -1,7 +1,6 @@
 package de.uka.ilkd.key.smt.newsmt2;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -225,7 +224,7 @@ public class SeqDefHandler implements SMTHandler {
      */
     @Override
     public List<SMTHandlerProperty<?>> getProperties() {
-        return Arrays.asList(HandlerUtil.PROPERTY_NOBINDERS);
+        return List.of(HandlerUtil.PROPERTY_NOBINDERS);
     }
 
 }
